--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Intelligence Enhancer for Ingress",
-  "version": "1.2.2.0",
+  "version": "1.2.3.0",
   "manifest_version": 2,
   "description": "Provides enhanced functionality to the ingress.com/intel site.",
   "page_action": {
@@ -13,7 +13,7 @@
             "128": "res/icon-128.png" },
   "content_scripts": [ {
       "js": [ "contentScript.js" ],
-	  "matches": [ "http://www.ingress.com/intel*" ],      
+	  "matches": [ "*://www.ingress.com/intel*" ],
 	  "run_at": "document_end" } ],
   "options_page": "options.html",
   "permissions" : [
@@ -21,7 +21,7 @@
 	"storage",
 	"notifications",
 	"clipboardWrite",
-	"http://www.ingress.com/intel*" ],
+	"*://www.ingress.com/intel*" ],
   "optional_permissions": ["geolocation"],
   "background": { "scripts": [ "background.js", "StorageManager.js", "Utilities.js", "versionCheck.js", "lib/CryptoJS/sha1.js", "lib/CryptoJS/enc-base64-min.js" ] },
   "web_accessible_resources": [ "injectScript.js", "res/icon-128-menu.png", "res/icon-48.png" ]
