--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/FileSaver"]
 	path = external/FileSaver
 	url = https://github.com/eligrey/FileSaver.js.git
+[submodule "external/CryptoJS"]
+	path = external/CryptoJS
+	url = https://github.com/svn2github/CryptoJS.git
